--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Rajon Rondo's Rehab</h1>
+<h1>Rajon Rondo's Rehab is Hopefully Short</h1>
 <h2>Bass is out and Garnett will never be traded</h2>
 <h3> This is the diff test </h3>
 
