--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,8 @@
 <h3> This is the diff test </h3>
 what is goin on with the Lakers?
 
+I hope this is going to work
+This is going to be a big bust
 <table>
   <tr>
     <th>Email</th>
