--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,10 @@
 <h1>Rajon Rondo's Rehab</h1>
 <h2>Bass is out and Garnett will never be traded</h2>
 <h3> This is the diff test </h3>
-what is goin on with the Lakers?
+<p>what is goin on with the Lakers?</p>
+
+<p>Dolphins are fast.</p>
+<p>Spiders are waaay better than dolphins.</p>
 
 I hope this is going to work
 This is going to be a big bust
