--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,7 @@
 <p>what is goin on with the Lakers?</p>
 
 <p>Dolphins are fast.</p>
+<p> Minnows are slow</p>
 <p>Spiders are waaay better than dolphins.</p>
 
 I hope this is going to work
