--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,7 @@
 <p>Dolphins are fast.</p>
 <p> Minnows are slow</p>
 <p>Spiders are waaay better than dolphins.</p>
+<p>test5</p>
 
 I hope this is going to work
 This is going to be a big bust
